back/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  selector:
    app: back-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: LoadBalancer
