back/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ing
  annotations:
    spec.ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: api.artearena.com.br
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: back-svcs
            port:
              number: 80
